resized backround pic

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- END NAVBAR -->
 
         <!--START HOME-->
-        <section class="section h-100vh jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('assets/DSC_0785.jpg');" id="home">
+        <section class="section h-100vh jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('assets/forest.jpg');" id="home">
             <div class="bg-overlay"></div>
             <div class="home-table">
                 <div class="home-table-center">
