--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="" />
         <meta name="author" content="ThemesBoss" />
 
-        <link rel="shortcut icon" href="images/favicon.ico">
+        <link rel="shortcut icon" href="assets/favicon.jpg">
 
         <!--Bootstrap Css-->
         <link rel="stylesheet" href="css/bootstrap.min.css" />
