buttercup link not working

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                         <h5 class="font-weight-bold">Buttercup</h5>
                                         <p class="mt-3 text-muted mb-0">This project is NOT mine. I'm working with the maintainer to improve the app. (Find it online or in your appstore!)</p>  
                                         <p class="mt-3 text-muted mb-0" >Buttercup is a Multiplatform password manager, available on browser, desktop, and mobile. It uses Electron, React-Native, NodeJS, along with many other techs. <p></p>
-                                             <a href="Buttercup.pw"><button class="project-btn">Website</button></a>
+                                             <a href="https://www.Buttercup.pw"><button class="project-btn">Website</button></a>
                                              <a href="github.com/buttercup"><button class="project-btn">Repo</button></a>
                                         </p>
                                     </div>   
