--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter"></i></a></li> -->
                                     </ul>
                                     <div class="header_btn">
-                                        <a href="assets/Resume.pdf" class="btn btn-outline-custom btn-rounded mt-4">View Resume</a>
+                                        <a href="assets/Wolfies_resume.pdf" class="btn btn-outline-custom btn-rounded mt-4">View Resume</a>
                                     </div>
                                 </div>
                             </div>
