--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
-                                    <h4>Welcome</h4>
-                                    <h1 class="header_title mb-0 mt-3">I Am <span class="element font-weight-bold" data-elements="Wolfgang Truong,A Software Developer, A Life Long Learner"></span></h1>
+                                    <h4>I AM</h4>
+                                    <h1 class="header_title mb-0 mt-3"><span class="element font-weight-bold" data-elements="Wolfgang Truong,A Software Developer, A Life Long Learner"></span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook"></i></a></li> -->
                                         <li class="list-inline-item"><a href="https://github.com/wolffles"><i class="fa fa-github"></i></a></li>
