--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                                         <h5 class="font-weight-bold">Developer connector</h5>
                                         <p class="mt-3 text-muted mb-0">My single page application. A social media for developers featuring Mongodb, Express, react/redux, and node. </p>  
                                         <p class="mt-3 text-muted mb-0">
-                                             <a href="https://demo-devconnect.herokuapp.com"><button class="project-btn">Live</button></a>
-                                             <a href="https://github.com/wolffles/devconnect"><button class="project-btn">Repo</button></a>
+                                             <a href="https://demo-devconnect.herokuapp.com" target="_blank"><button class="project-btn">Live</button></a>
+                                             <a href="https://github.com/wolffles/devconnect" target="_blank"><button class="project-btn">Repo</button></a>
                                         </p>
                                     </div>   
                                 </div>
@@ -201,8 +201,8 @@
                                         <h5 class="font-weight-bold">Buttercup</h5>
                                         <p class="mt-3 text-muted mb-0">This project is NOT mine. I'm working with the maintainer to improve the app. (Find it online or in your appstore!)</p>  
                                         <p class="mt-3 text-muted mb-0" >Buttercup is a Multiplatform password manager, available on browser, desktop, and mobile. It uses Electron, React-Native, NodeJS, along with many other techs. <p></p>
-                                             <a href="https://buttercup.pw"><button class="project-btn">Website</button></a>
-                                             <a href="https://github.com/buttercup"><button class="project-btn">Repo</button></a>
+                                             <a href="https://buttercup.pw" target="_blank"><button class="project-btn">Website</button></a>
+                                             <a href="https://github.com/buttercup" target="_blank"><button class="project-btn">Repo</button></a>
                                         </p>
                                     </div>   
                                 </div>
@@ -214,8 +214,8 @@
                                             <h5 class="font-weight-bold">Dataworks</h5>
                                             <p class="mt-3 text-muted mb-0">My application developed with rails and javascript to help track another websites usage and satistics. </p>  
                                             <p class="mt-3 text-muted mb-0">I didn't try hard on the front end aesthetics, just trying to show functionality.<p></p>
-                                                 <a href="https://demo-dataworkz.herokuapp.com"><button class="project-btn">Live</button></a>
-                                                 <a href="https://github.com/wolffles/DataWorkz"><button class="project-btn">Repo</button></a>
+                                                 <a href="https://demo-dataworkz.herokuapp.com" target="_blank"><button class="project-btn" >Live</button></a>
+                                                 <a href="https://github.com/wolffles/DataWorkz" target="_blank"><button class="project-btn">Repo</button></a>
                                             </p>
                                         </div>   
                                     </div>
