--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
                                     <h4>I AM</h4>
-                                    <h1 class="header_title mb-0 mt-3"><span class="element font-weight-bold" data-elements="Wolfgang Truong,A Software Developer, A Life Long Learner"></span></h1>
+                                    <h1 class="header_title mb-0 mt-3"><span class="element font-weight-bold" data-elements="Wolfgang Truong,A Software Developer,A Life Long Learner"></span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook"></i></a></li> -->
                                         <li class="list-inline-item"><a href="https://github.com/wolffles"><i class="fa fa-github"></i></a></li>
@@ -206,7 +206,7 @@
                                         <img src="assets/Dataworks.png" class="image-projects"/>
                                         <div class="service-content mt-4">
                                             <h5 class="font-weight-bold">Dataworks</h5>
-                                            <p class="mt-3 text-muted mb-0">My application developed with rails and javascript to help track another websites usage and satistics. </p>  
+                                            <p class="mt-3 text-muted mb-0">My application developed with rails and javascript to help track another website's usage and satistics. </p>  
                                             <p class="mt-3 text-muted mb-0">I didn't try hard on the front end aesthetics, just trying to show functionality.<p></p>
                                                  <a href="https://demo-dataworkz.herokuapp.com" target="_blank"><button class="project-btn" >Live</button></a>
                                                  <a href="https://github.com/wolffles/DataWorkz" target="_blank"><button class="project-btn">Repo</button></a>
