added netbrary to the projects list

--- a/index.html
+++ b/index.html
@@ -187,6 +187,21 @@
                             </div>
                             <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
+                                    <img src="assets/netbrary_screenshot.png" class="image-projects" />
+                                    <div class="service-content mt-4">
+                                        <h5 class="font-weight-bold">Netbrary</h5>
+                                        <p class="mt-3 text-muted mb-0">Similar to IMDB but uses themoviedb.org's API. This is one of my favorite projects and I use it to keep my skills sharp. Built using Express, React/Redux, Node</p>
+                                        <p class="mt-3 text-muted mb-0">
+                                            <a href="https://demo-netbrary.herokuapp.com" target="_blank"><button
+                                                    class="project-btn">Live</button></a>
+                                            <a href="https://github.com/wolffles/Netbrary" target="_blank"><button
+                                                    class="project-btn">Repo</button></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="lan_box_ser text-center rounded p-4 mt-3">
                                     <img src="assets/buttercup.png" class="image-projects"/>
                                     <!-- <div class="ser_icon">
                                     <i class="mbri-responsive"></i>
