updated about me

--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
                                 <li class="list-inline-item mr-0 text-muted">Photographer</li>
                                 <li class="list-inline-item mr-0 text-muted">Devloper</li>
                             </ul> -->
-                            <p class="text-muted mt-3">I lived in San francisco for 4 years, where I started my journey into the tech industry. I took an immersive program where I learned how to code in multiple languages. Currently I live in Southern California, Working remotely on Open Source Projects. I’m as passionate about learning, and as I am about enjoying life.</p>
+                            <p class="text-muted mt-3">Hey, I'm Wolfgang Truong, I'm a Full Stack Developer; When I was learning how to code I
+                            realized the value of the open source community. So many developers and companies wouldn't be where they are today
+                            without it, and those people in all industries rely on technology like JQuery, Node.js, Electron, and React all these
+                            technologies are all open sourced. When getting involved with them I find it gives me an edge verses someone who
+                            understand a few use cases and assumes they know the library. I'm also interested in giving back to the community, and
+                            paying my dues to those selfless devs who helped get me to where I'm at today. If you're interested, in working together send me a message.</p>
                             <p class="text-muted mt-3">I chase achivements, that's my motivation, life goal, and vice.</p>
                         </div>
                     </div>
