--- a/index.html
+++ b/index.html
@@ -148,13 +148,17 @@
                                 <li class="list-inline-item mr-0 text-muted">Photographer</li>
                                 <li class="list-inline-item mr-0 text-muted">Devloper</li>
                             </ul> -->
-                            <p class="text-muted mt-3">Hey, I'm Wolfgang Truong, I'm a Full Stack Developer; When I was learning how to code I
-                            realized the value of the open source community. So many developers and companies wouldn't be where they are today
-                            without it, and those people in all industries rely on technology like JQuery, Node.js, Electron, and React all these
-                            technologies are all open sourced. When getting involved with them I find it gives me an edge verses someone who
-                            understand a few use cases and assumes they know the library. I'm also interested in giving back to the community, and
-                            paying my dues to those selfless devs who helped get me to where I'm at today. If you're interested, in working together send me a message.</p>
-                            <p class="text-muted mt-3">I chase achivements, that's my motivation, life goal, and vice.</p>
+                            <p class="text-muted mt-3"></p>
+                            <p class="text-muted mt-3">Coding has been my passion for the past 4 years, ever since I completed my first coding challenge I knew this is what I
+                            wanted. I was going to San Francisco State for Marketing, while at university I met a few people who introduced me
+                            to Ruby and said apps could be made with it. Having an entrepreneur type nature I had a few ideas I wanted to
+                            materialize, so I kept learning Ruby to pursue app development. I soon realized that I had never felt this type of
+                            determination in my marketing career before. Marketing didn’t challenge me enough and I wanted to be
+                            challenged. However my courses didn’t translate to a Comp Sci degree and I couldn’t afford another 3 years at uni,
+                            I left SFSU to get a jump start on coding, and invested in a bootcamp that offered mentorship. Bloc helped me understand
+                            the software development industry, and taught me solid computer science theories. Now that the apprenticeship at Bloc is
+                            finished, I’m currently making clones of popular applications to demonstrate my skill, and trying to find an employer to
+                            take the leap of faith and invest in me and my determination to become an even greater developer.</p>
                         </div>
                     </div>
                 </div>
