--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@
                         <li class="nav-item">
                             <a href="#about" class="nav-link">About</a>
                         </li>
- 
-                        <!-- <li class="nav-item">
-                            <a href="#education" class="nav-link">Education</a>
-                        </li> -->
                         <li class="nav-item">
                             <a href="#projects" class="nav-link">Projects</a>
                         </li>
@@ -72,12 +68,6 @@
                         <li class="nav-item">
                             <a href="#skills" class="nav-link">Skills</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a href="#client" class="nav-link">Skills</a>
-                        </li> -->
-                        <!-- <li class="nav-item">
-                            <a href="#blog" class="nav-link">Blog</a>
-                        </li> -->
                         <li class="nav-item">
                             <a href="#contact" class="nav-link">Contact</a>
                         </li>
@@ -462,6 +452,7 @@
         <script src="js/owl.carousel.min.js"></script>
         <!--CUSTOM JS-->
         <script src="js/custom.js"></script>
+        <script src="js/wolf.js"></script>
 
         <script>
             $(".element").each(function() {
