--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <!-- <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter"></i></a></li> -->
                                     </ul>
                                     <div class="header_btn">
-                                        <a href="assets/Wolfies_resume.pdf" class="btn btn-outline-custom btn-rounded mt-4" target="_blank">View Resume</a>
+                                        <a href="assets/resume_wolfgang_truong.pdf" class="btn btn-outline-custom btn-rounded mt-4" target="_blank">View Resume</a>
                                     </div>
                                 </div>
                             </div>
@@ -415,7 +415,7 @@
                                 <!-- <li class="list-inline-item"><a href="" class="social-icon text-muted"><i class="mdi mdi-facebook"></i></a></li> -->
                                 <li class="list-inline-item"><a href="https://github.com/wolffles" class="social-icon text-muted"><i class="fa fa-github"></i></a></li>
                                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/wolfgang-truong-391b40a2/" class="social-icon text-muted"><i class="mdi mdi-linkedin"></i></a></li>
-                                <li class="list-inline-item"><a href="assets/Wolfies_resume.pdf" class="social-icon text-muted" target="_blank"><i class="fa fa-file-pdf-o"></i></a></li>
+                                <li class="list-inline-item"><a href="assets/resume_wolfgang_truong.pdf" class="social-icon text-muted" target="_blank"><i class="fa fa-file-pdf-o"></i></a></li>
                             </ul>
                         </div>
                     </div>
