--- a/index.html
+++ b/index.html
@@ -173,6 +173,22 @@
                         <div class="row mt-4 pt-4">
                             <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
+                                    <img src="assets/StayFreshers.png" class="image-projects" />
+                                    <div class="service-content mt-4">
+                                        <h5 class="font-weight-bold">stayfreshers</h5>
+                                        <p class="mt-3 text-muted mb-0">My main project and most responsive web application to date, works on any device's browser. Incorporating everything I've learned from past project I'm adding new features daily.</p>
+                                        <p class="mt-3 text-muted mb-0">
+                                            <a href="https://stayfreshers.herokuapp.com" target="_blank"><button
+                                                    class="project-btn">Live</button></a>
+                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
+                                                    class="project-btn">Repo</button></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        <!-- <div class="row mt-4 pt-4"> -->
+                            <div class="col-lg-4">
+                                <div class="lan_box_ser text-center rounded p-4 mt-3">
                                     <img src="assets/developerConnector.png" class="image-projects"/>
                                     <div class="service-content mt-4">
                                         <h5 class="font-weight-bold">Developer connector</h5>
@@ -197,22 +213,6 @@
                                                     class="project-btn">Repo</button></a>
                                         </p>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                    <img src="assets/buttercup.png" class="image-projects"/>
-                                    <!-- <div class="ser_icon">
-                                    <i class="mbri-responsive"></i>
-                                    </div> -->
-                                    <div class="service-content mt-4">
-                                        <h5 class="font-weight-bold">Buttercup</h5>
-                                        <p class="mt-3 text-muted mb-0">This project is NOT mine. I'm working with the maintainer to improve the app. (Find it online or in your appstore!)</p>  
-                                        <p class="mt-3 text-muted mb-0" >Buttercup is a Multiplatform password manager, available on browser, desktop, and mobile. It uses Electron, React-Native, NodeJS, along with many other techs. <p></p>
-                                             <a href="https://buttercup.pw" target="_blank"><button class="project-btn">Website</button></a>
-                                             <a href="https://github.com/buttercup" target="_blank"><button class="project-btn">Repo</button></a>
-                                        </p>
-                                    </div>   
                                 </div>
                             </div>
                             <div class="col-lg-4">
