updated the about me to be more recent

--- a/index.html
+++ b/index.html
@@ -139,16 +139,8 @@
                                 <li class="list-inline-item mr-0 text-muted">Devloper</li>
                             </ul> -->
                             <p class="text-muted mt-3"></p>
-                            <p class="text-muted mt-3">Coding has been my passion for the past 4 years, ever since I completed my first coding challenge I knew this is what I
-                            wanted. I was going to San Francisco State for Marketing, while at university I met a few people who introduced me
-                            to Ruby and said apps could be made with it. Having an entrepreneur type nature I had a few ideas I wanted to
-                            materialize, so I kept learning Ruby to pursue app development. I soon realized that I had never felt this type of
-                            determination in my marketing career before. Marketing didn’t challenge me enough and I wanted to be
-                            challenged. However my courses didn’t translate to a Comp Sci degree and I couldn’t afford another 3 years at uni,
-                            I left SFSU to get a jump start on coding, and invested in a bootcamp that offered mentorship. Bloc helped me understand
-                            the software development industry, and taught me solid computer science theories. Now that the apprenticeship at Bloc is
-                            finished, I’m currently making clones of popular applications to demonstrate my skill, and trying to find an employer to
-                            take the leap of faith and invest in me and my determination to become an even greater developer.</p>
+                            <p class="text-muted mt-3"> My coding enthusiasm turned into a career, I’m currently working as a Software Developer/Consultant for a Global Enterprise called Thoughtworks, 
+                                furthering my thirst for all things tech. This page was once my portfolio is now a hub for my passion projects. </p>
                         </div>
                     </div>
                 </div>
