added folder and test page

--- a/pages/index.html
+++ b/pages/index.html
@@ -141,6 +141,7 @@
                             <p class="text-muted mt-3"></p>
                             <p class="text-muted mt-3"> My coding enthusiasm turned into a career, I’m currently working as a Software Developer/Consultant for a Global Enterprise called Thoughtworks, 
                                 furthering my thirst for all things tech. This page was once my portfolio is now a hub for my passion projects. </p>
+                            <p> <a href="test.html">testpage</a></p>
                         </div>
                     </div>
                 </div>
