adds tiebreaker to projects

--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
                             <img src="assets/profilePic.jpg" alt="" class="img-fluid mx-auto d-block img-about">
                         </div>
                         <div class="text-center about-detail mx-auto mt-5">
-                            <h3 class="mb-3">Hello! <span class="font-weight-bold text-custom"> My friends call me Wolfie</span></h3>
+                            <h3 class="mb-3">Hello! <span class="font-weight-bold text-custom"> my name is Wolfgang or Wolf.</span></h3>
                             <!-- <ul class="mb-0 list-inline text-center about-work">
                                 <li class="list-inline-item mr-0 text-muted">UI/UX Designer</li>
                                 <li class="list-inline-item mr-0 text-muted">Photographer</li>
                                 <li class="list-inline-item mr-0 text-muted">Devloper</li>
                             </ul> -->
                             <p class="text-muted mt-3"></p>
-                            <p class="text-muted mt-3"> My coding enthusiasm turned into a career, I’m currently working as a Software Developer/Consultant for a Global Enterprise called Thoughtworks, 
-                                furthering my thirst for all things tech. This page was once my portfolio is now a hub for my passion projects. </p>
-                            <p> <a href="test.html">testpage</a></p>
+                            <p class="text-muted mt-3"> I'm a Software Developer by day, hobbist by night. I've always been creative, fueled by my thirst for knowledge and DIYing everything. 
+                                This page is a portfolio and hub for my projects. I can work with others or independently as long as the goal is building something I'm motivated.</p>
+                                
                         </div>
                     </div>
                 </div>
@@ -159,12 +159,40 @@
                                     <div class="main-title-border">
                                         <i class="mdi mdi-asterisk"></i>
                                     </div>
-                                    <!-- <p class="text-muted mx-auto mt-2">After moving to the Bay Area a few years ago, I gradually became imursed in the tech industry through a lot of self study and research.</p> -->
+                                    <!-- some text goes here? -->
                                 </div>
                             </div>
                         </div>
                         <div class="row mt-4 pt-4">
                             <div class="col-lg-4">
+                                <div class="lan_box_ser text-center rounded p-4 mt-3">
+                                    <img src="assets/tiebreaker.png" class="image-projects" />
+                                    <div class="service-content mt-4">
+                                        <h5 class="font-weight-bold">TieBreaker</h5>
+                                        <p class="mt-3 text-muted mb-0">Made during the pandemic to play table top games with friends online (open in two tabs to treat it like multiple users)</p>
+                                        <p class="mt-3 text-muted mb-0">
+                                            <a href="https://tie-breaker-1d45a4631458.herokuapp.com/" target="_blank"><button class="project-btn">Live</button></a>
+                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
+                                                    class="project-btn">Repo</button></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="lan_box_ser text-center rounded p-4 mt-3">
+                                    <img src="assets/calculator.png" class="image-projects" />
+                                    <div class="service-content mt-4">
+                                        <h5 class="font-weight-bold">Magical Calculator</h5>
+                                        <p class="mt-3 text-muted mb-0">Silly little calculator app I thought was funny to make</p>
+                                        <p class="mt-3 text-muted mb-0">
+                                            <a href="i-calculator.html" target="_blank"><button class="project-btn">Live</button></a>
+                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
+                                                    class="project-btn">Repo</button></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
                                     <img src="assets/StayFreshers.png" class="image-projects" />
                                     <div class="service-content mt-4">
@@ -178,9 +206,8 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
-                        <!-- <div class="row mt-4 pt-4"> -->
-                            <div class="col-lg-4">
+                            </div> -->
+                            <!-- <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
                                     <img src="assets/developerConnector.png" class="image-projects"/>
                                     <div class="service-content mt-4">
@@ -222,7 +249,7 @@
                                     </div>
                                 </div>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
 
         <!-- START skills (Skills) -->
