new login system project

--- a/funStuffs/i-calculator.html
+++ b/funStuffs/i-calculator.html
@@ -1,6 +1,6 @@
 
 <head>
-    <link rel="stylesheet" href="stuffs/calculator.css" />
+    <link rel="stylesheet" href="../funAssets/calculator.css" />
 </head>
 <div class="header">
     <h1>Magical Calculator</h1>
