--- a/index.html
+++ b/index.html
@@ -185,28 +185,24 @@
                                         <h5 class="font-weight-bold">Magical Calculator</h5>
                                         <p class="mt-3 text-muted mb-0">Silly little calculator app I thought was funny to make</p>
                                         <p class="mt-3 text-muted mb-0">
-                                            <a href="i-calculator.html" target="_blank"><button class="project-btn">Live</button></a>
-                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
-                                                    class="project-btn">Repo</button></a>
+                                            <a href="funStuffs/i-calculator.html" target="_blank"><button class="project-btn">Live</button></a>
                                         </p>
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-4">
+                            <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                    <img src="assets/StayFreshers.png" class="image-projects" />
+                                    <img src="funAssets/IMG_cyberSecurity.jpg" class="image-projects" />
                                     <div class="service-content mt-4">
-                                        <h5 class="font-weight-bold">stayfreshers</h5>
-                                        <p class="mt-3 text-muted mb-0">My main project and most responsive web application to date, works on any device's browser. Incorporating everything I've learned from past project I'm adding new features daily.</p>
+                                        <h5 class="font-weight-bold">disruptive security system</h5>
+                                        <p class="mt-3 text-muted mb-0">login system prototype</p>
                                         <p class="mt-3 text-muted mb-0">
-                                            <a href="https://stayfreshers.herokuapp.com" target="_blank"><button
+                                            <a href="funStuffs/simonSaysLogin.html" target="_blank"><button
                                                     class="project-btn">Live</button></a>
-                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
-                                                    class="project-btn">Repo</button></a>
                                         </p>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                             <!-- <div class="col-lg-4">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
                                     <img src="assets/developerConnector.png" class="image-projects"/>
