--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         </div>
                     <div class="col-sm">
                         <div class="lan_box_ser text-center rounded p-4 mt-3">
-                            <img src="assets/redux.png" class="image-skills"/>
+                            <img src="assets/java.png" class="image-skills"/>
                              <div class="service-content mt-4">
                             </div>
                         </div>
@@ -292,6 +292,34 @@
                     </div>
                 </div>
                 <div class="row mt-4 pt-4">
+                    <div class="col-sm">
+                        <div class="lan_box_ser text-center rounded p-4 mt-3">
+                            <img src="assets/c.png" class="image-skills"/>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="lan_box_ser text-center rounded p-4 mt-3">
+                            <img src="assets/nextjs.png" class="image-skills"/>
+                            <div class="service-content mt-4">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="lan_box_ser text-center rounded p-4 mt-3">
+                            <img src="assets/docker.png" class="image-skills"/>
+                            <div class="service-content mt-4">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm">
+                        <div class="lan_box_ser text-center rounded p-4 mt-3">
+                            <img src="assets/git.png" class="image-skills"/>
+                            <div class="service-content mt-4">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-4 pt-4">
                         <div class="col-sm">
                             <div class="lan_box_ser text-center rounded p-4 mt-3">
                                 <img src="assets/mongodb.png" class="image-skills"/>
@@ -299,7 +327,7 @@
                         </div>
                         <div class="col-sm">
                                 <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                    <img src="assets/express.png" class="image-skills"/>
+                                    <img src="assets/Kubernetes.png" class="image-skills"/>
                                      <div class="service-content mt-4">
                                     </div>
                                 </div>
@@ -347,34 +375,6 @@
                                     </div>
                             </div>
                         </div>
-                        <div class="row mt-4 pt-4">
-                                <div class="col-sm">
-                                    <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                        <img src="assets/html.png" class="image-skills"/>
-                                    </div>
-                                </div>
-                                <div class="col-sm">
-                                        <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                            <img src="assets/canvas.png" class="image-skills"/>
-                                             <div class="service-content mt-4">
-                                            </div>
-                                        </div>
-                                    </div>
-                                <div class="col-sm">
-                                    <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                        <img src="assets/jQuery.gif" class="image-skills"/>
-                                         <div class="service-content mt-4">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm">
-                                        <div class="lan_box_ser text-center rounded p-4 mt-3">
-                                            <img src="assets/git.png" class="image-skills"/>
-                                             <div class="service-content mt-4">
-                                            </div>
-                                        </div>
-                                </div>
-                            </div>
             </div>
         </section>
         <!-- END SERVICES -->
