--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                                         <h5 class="font-weight-bold">TieBreaker</h5>
                                         <p class="mt-3 text-muted mb-0">Made during the pandemic to play table top games with friends online (open in two tabs to treat it like multiple users)</p>
                                         <p class="mt-3 text-muted mb-0">
-                                            <a href="https://tie-breaker-1d45a4631458.herokuapp.com/" target="_blank"><button class="project-btn">Live</button></a>
-                                            <a href="https://github.com/wolffles/StayFreshersJS" target="_blank"><button
+                                            <a href="https://tie-breaker.website" target="_blank"><button class="project-btn">Live</button></a>
+                                            <a href="https://github.com/wolffles/TieBreaker" target="_blank"><button
                                                     class="project-btn">Repo</button></a>
                                         </p>
                                     </div>
