--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                         <h5 class="font-weight-bold">TieBreaker</h5>
                                         <p class="mt-3 text-muted mb-0">Made during the pandemic to play table top games with friends online (open in two tabs to treat it like multiple users)</p>
                                         <p class="mt-3 text-muted mb-0">
-                                            <a href="https://tie-breaker.website" target="_blank"><button class="project-btn">Live</button></a>
+                                            <a href="https://www.tie-breaker.website" target="_blank"><button class="project-btn">Live</button></a>
                                             <a href="https://github.com/wolffles/TieBreaker" target="_blank"><button
                                                     class="project-btn">Repo</button></a>
                                         </p>
